--- a/static/src/css/input.css
+++ b/static/src/css/input.css
@@ -210,11 +210,11 @@
     }
 
     .page-link{
-        @apply bg-slate-50 hover:bg-slate-200 active:bg-slate-300 dark:bg-zinc-700  dark:hover:bg-zinc-600 dark:active:bg-zinc-400 border border-slate-200 dark:border-zinc-600 block relative hover:no-underline text-slate-600 dark:text-zinc-200 text-xs md:text-sm lg:text-lg w-full h-full px-2 py-2 md:px-3 md:py-3 lg:px-4 lg:py-4 items-center transition-all;
+        @apply bg-slate-50 hover:bg-slate-200 active:bg-slate-300 dark:bg-zinc-700  dark:hover:bg-zinc-600 dark:active:bg-zinc-400 border border-slate-200 dark:border-zinc-600 block relative hover:no-underline text-slate-600 dark:text-zinc-200 text-xs md:text-sm lg:text-lg w-full h-full px-2 py-2 md:px-3 md:py-3 lg:px-4 items-center transition-all;
     }
 
-    .page-link-collapse {
-        @apply bg-slate-50 dark:bg-zinc-700 border border-slate-200 dark:border-zinc-600 block relative cursor-default hover:no-underline text-slate-600 dark:text-zinc-200 text-xs md:text-sm lg:text-lg w-full h-full px-2 py-2 md:px-3 md:py-3 lg:px-4 lg:py-4 items-center;
+    .page-link.collapse {
+        @apply bg-slate-50 dark:bg-zinc-700 cursor-default;
     }
 
     .page-link.active{
